# cpp-hello-ci

./: CMakeLists.txt  README.md  expected.txt  main.cpp  test.sh
.github/workflows/: ci.yml
